objects/Opportunity_Info_Channel_Business_Plan__c.object
<CustomObject>
    <description>5.0.13 - Technical Object to establish many to many between Opportunity Information &amp; Channel Partner Bussiness Plan</description>
    <fields>
        <fullName>Application__c</fullName>
        <formula>TEXT(Opportunity_Information__r.Opportunity_Name_m__r.Application__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Business_Plan__c</fullName>
        <label>Channel Partner Business Plan</label>
        <referenceTo>Joint_Business_Plan__c</referenceTo>
        <relationshipLabel>Opportunity Info Channel Business Plans</relationshipLabel>
        <relationshipName>Opportunity_Info_Channel_Business_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Confidence_Level__c</fullName>
        <formula>TEXT(Opportunity_Information__r.Opportunity_Name_m__r.Confidence_Level__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confidence Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <formula>Opportunity_Information__r.Opportunity_Name_m__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User__c</fullName>
        <formula>Opportunity_Information__r.Account_End_User_m__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Award_Date__c</fullName>
        <formula>Opportunity_Information__r.Opportunity_Name_m__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <formula>TEXT(Opportunity_Information__r.ABB_Industry_Usage_Level1__c) + &apos; &apos;+TEXT(Opportunity_Information__r.Opportunity_Name_m__r.ABB_Industry_Usage_Level2__c )+ &apos; &apos;+TEXT(Opportunity_Information__r.Opportunity_Name_m__r.ABB_Industry_Usage_Level3__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Information__c</fullName>
        <label>Opportunity Information</label>
        <referenceTo>Opportunity_Information__c</referenceTo>
        <relationshipLabel>Opportunity Info Channel Business Plans</relationshipLabel>
        <relationshipName>Opportunity_Info_Channel_Business_Plans</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity_Information__r.Opportunity_Name_m__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Value_USD__c</fullName>
        <formula>Opportunity_Information__r.Opportunity_Name_m__r.Technical_Amount_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Value USD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_Oppty_Info_Key__c</fullName>
        <externalId>true</externalId>
        <label>Plan_Oppty_Info_Key</label>
        <length>37</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Stage__c</fullName>
        <formula>TEXT(Opportunity_Information__r.Opportunity_Name_m__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Stage</label>
        <type>Text</type>
    </fields>
    <label>Opportunity Info Channel Business Plan</label>
    <nameField>
        <displayFormat>CPO-{00000}</displayFormat>
        <label>Opp. Info Channel Business Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Info Channel Business Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>